# iPS-UU

./: .gitignore  CHANGELOG.md  CONTENTS_3UTOOLS_RESTORE_AUDIT.md  CONTENTS_REQUIREMENTS.md  IPSW_DOWNGRADE_LOGIC.md  README.md  RELEASE_MANIFEST.md  RESTORECTL_README.md  RESTORE_RESEARCH_README.md  findings.md  iPS-UU.spec  ipsw_downgrade_planner.py  pyproject.toml  requirements-dev.txt  requirements-gui.txt  requirements.txt  restore_backend_map.json  tss_replay_listener.py
app/: __init__.py  device_debug.py
data/: ios_device_map.json
docs/: RELEASE_CHECKLIST.md
ips_uu/: __init__.py  __main__.py  airswitch.py  atlascore.py  banner.py  cli.py  dcsd.py  faketunes.py  frameworks.py  installcoordination.py  planner.py  purple_rabbit.py  purplefat.py  restore_research.py  restorectl.py  sniff.py  tss_replay.py
rengineer/: REVERSE_ENGINEERING_REPORT.md
scripts/: audit_tool_architectures.py  build_gui.sh  check_release.sh  export_icons.py  stage_forsake.sh  stage_universal_tools.sh
tests/: test_about_support_gui.py  test_contents_research_service.py  test_device_service.py  test_external_tools_service.py  test_forsake_service.py  test_gui_json_serialization.py  test_ios_device_viewer_service.py  test_mock_tss_service.py  test_palera1n_service.py  test_purple_restore_gui.py  test_purple_restore_service.py  test_restore_options_service.py  test_shsh_blob_service.py  test_signing_simulator_gui.py  test_tool_architecture_audit.py  test_tool_resolver.py  test_turdus_merula_service.py
tools/: cfgutil  idevice_id  idevicediagnostics  ideviceenterrecovery  ideviceinfo  (+7 more)
(+110 files in other folders)
